# fsai_sim_training

./: LIA.md  README.md  package.xml  setup.cfg  setup.py
config/: promo.rviz
docs/: launch_files.md  packages.md  running_nodes.md  setup.md  structure.md
fsai_sim_training/: lidar_demo.py  lidar_tf_demo.py
launch/: example.py  example_full.py  example_manual.py  example_multiple_missions.py  example_tf_info.py  follow_breadcrumbs.py
