<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fsai_sim_training</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="david@somewebsite.co.uk">david</maintainer>
  <license>TODO: License declaration</license>

  <depend>fsai_messages</depend>
  <depend>webots_fsai</depend>
  <depend>fsai_common</depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
